runtime/gen/basis-ffi.h

extern const C_Int_t Posix_ProcEnv_SC_XOPEN_REALTIME;
extern const C_Int_t Posix_ProcEnv_SC_XOPEN_REALTIME_THREADS;
extern const C_Int_t Posix_ProcEnv_SC_XOPEN_SHM;
extern const C_Int_t Posix_ProcEnv_SC_XOPEN_STREAMS;
extern const C_Int_t Posix_ProcEnv_SC_XOPEN_UNIX;
extern const C_Int_t Posix_ProcEnv_SC_XOPEN_VERSION;
C_Errno_t(C_Int_t) Posix_ProcEnv_setenv(NullString8_t,NullString8_t);
C_Errno_t(C_Int_t) Posix_ProcEnv_setgid(C_GId_t);
C_Errno_t(C_Int_t) Posix_ProcEnv_setgroups(C_Int_t,Vector(C_GId_t));
C_Errno_t(C_Int_t) Posix_ProcEnv_setpgid(C_PId_t,C_PId_t);
C_Errno_t(C_PId_t) Posix_ProcEnv_setsid(void);
C_Errno_t(C_Int_t) Posix_ProcEnv_setuid(C_UId_t);
C_Errno_t(C_Long_t) Posix_ProcEnv_sysconf(C_Int_t);
C_Errno_t(C_Clock_t) Posix_ProcEnv_times(void);
C_Clock_t Posix_ProcEnv_Times_getCSTime(void);
C_Clock_t Posix_ProcEnv_Times_getCUTime(void);
C_Clock_t Posix_ProcEnv_Times_getSTime(void);
C_Clock_t Posix_ProcEnv_Times_getUTime(void);
C_Errno_t(C_String_t) Posix_ProcEnv_ttyname(C_Fd_t);
C_Errno_t(C_Int_t) Posix_ProcEnv_uname(void);
C_String_t Posix_ProcEnv_Uname_getMachine(void);
C_String_t Posix_ProcEnv_Uname_getNodeName(void);
C_String_t Posix_ProcEnv_Uname_getRelease(void);
C_String_t Posix_ProcEnv_Uname_getSysName(void);
C_String_t Posix_ProcEnv_Uname_getVersion(void);
C_UInt_t Posix_Process_alarm(C_UInt_t);
C_Errno_t(C_Int_t) Posix_Process_exece(NullString8_t,String8_t,Array(C_Pointer_t),Vector(C_Size_t),String8_t,Array(C_Pointer_t),Vector(C_Size_t));
C_Errno_t(C_Int_t) Posix_Process_execp(NullString8_t,String8_t,Array(C_Pointer_t),Vector(C_Size_t));
__attribute__((noreturn)) void Posix_Process_exit(C_Status_t);
C_Int_t Posix_Process_exitStatus(C_Status_t);
C_Errno_t(C_PId_t) Posix_Process_fork(void);
C_Int_t Posix_Process_ifExited(C_Status_t);
C_Int_t Posix_Process_ifSignaled(C_Status_t);
C_Int_t Posix_Process_ifStopped(C_Status_t);
C_Errno_t(C_Int_t) Posix_Process_kill(C_PId_t,C_Signal_t);
C_Errno_t(C_Int_t) Posix_Process_nanosleep(Ref(C_Time_t),Ref(C_Long_t));
C_Errno_t(C_Int_t) Posix_Process_pause(void);
C_UInt_t Posix_Process_sleep(C_UInt_t);
C_Signal_t Posix_Process_stopSig(C_Status_t);
C_Errno_t(C_Status_t) Posix_Process_system(NullString8_t);
C_Signal_t Posix_Process_termSig(C_Status_t);
extern const C_Int_t Posix_Process_W_NOHANG;
extern const C_Int_t Posix_Process_W_UNTRACED;
C_Errno_t(C_PId_t) Posix_Process_waitpid(C_PId_t,Ref(C_Int_t),C_Int_t);
C_Errno_t(C_Int_t) Posix_Signal_default(C_Signal_t);
C_Errno_t(C_Int_t) Posix_Signal_handlee(C_Signal_t);
void Posix_Signal_handleGC(void);
C_Errno_t(C_Int_t) Posix_Signal_ignore(C_Signal_t);
C_Errno_t(C_Int_t) Posix_Signal_isDefault(C_Signal_t,Ref(C_Int_t));
C_Errno_t(C_Int_t) Posix_Signal_isIgnore(C_Signal_t,Ref(C_Int_t));
C_Int_t Posix_Signal_isPending(C_Signal_t);
C_Int_t Posix_Signal_isPendingGC(void);
extern const C_Int_t Posix_Signal_NSIG;
void Posix_Signal_resetPending(void);
extern const C_Int_t Posix_Signal_SIG_BLOCK;
extern const C_Int_t Posix_Signal_SIG_SETMASK;
extern const C_Int_t Posix_Signal_SIG_UNBLOCK;
extern const C_Signal_t Posix_Signal_SIGABRT;
C_Errno_t(C_Int_t) Posix_Signal_sigaddset(C_Signal_t);
extern const C_Signal_t Posix_Signal_SIGALRM;
extern const C_Signal_t Posix_Signal_SIGBUS;
extern const C_Signal_t Posix_Signal_SIGCHLD;
extern const C_Signal_t Posix_Signal_SIGCONT;
C_Errno_t(C_Int_t) Posix_Signal_sigdelset(C_Signal_t);
C_Errno_t(C_Int_t) Posix_Signal_sigemptyset(void);
C_Errno_t(C_Int_t) Posix_Signal_sigfillset(void);
extern const C_Signal_t Posix_Signal_SIGFPE;
extern const C_Signal_t Posix_Signal_SIGHUP;
extern const C_Signal_t Posix_Signal_SIGILL;
extern const C_Signal_t Posix_Signal_SIGINT;
C_Errno_t(C_Int_t) Posix_Signal_sigismember(C_Signal_t);
extern const C_Signal_t Posix_Signal_SIGKILL;
extern const C_Signal_t Posix_Signal_SIGPIPE;
extern const C_Signal_t Posix_Signal_SIGPOLL;
C_Errno_t(C_Int_t) Posix_Signal_sigprocmask(C_Int_t);
extern const C_Signal_t Posix_Signal_SIGPROF;
extern const C_Signal_t Posix_Signal_SIGQUIT;
extern const C_Signal_t Posix_Signal_SIGSEGV;
extern const C_Signal_t Posix_Signal_SIGSTOP;
void Posix_Signal_sigsuspend(void);
extern const C_Signal_t Posix_Signal_SIGSYS;
extern const C_Signal_t Posix_Signal_SIGTERM;
extern const C_Signal_t Posix_Signal_SIGTRAP;
extern const C_Signal_t Posix_Signal_SIGTSTP;
extern const C_Signal_t Posix_Signal_SIGTTIN;
extern const C_Signal_t Posix_Signal_SIGTTOU;
extern const C_Signal_t Posix_Signal_SIGURG;
extern const C_Signal_t Posix_Signal_SIGUSR1;
extern const C_Signal_t Posix_Signal_SIGUSR2;
extern const C_Signal_t Posix_Signal_SIGVTALRM;
extern const C_Signal_t Posix_Signal_SIGXCPU;
extern const C_Signal_t Posix_Signal_SIGXFSZ;
C_Errno_t(C_Int_t) Posix_SysDB_getgrgid(C_GId_t);
C_Errno_t(C_Int_t) Posix_SysDB_getgrnam(NullString8_t);
C_Errno_t(C_Int_t) Posix_SysDB_getpwnam(NullString8_t);
C_Errno_t(C_Int_t) Posix_SysDB_getpwuid(C_GId_t);
C_GId_t Posix_SysDB_Group_getGId(void);
C_StringArray_t Posix_SysDB_Group_getMem(void);
C_String_t Posix_SysDB_Group_getName(void);
C_String_t Posix_SysDB_Passwd_getDir(void);
C_GId_t Posix_SysDB_Passwd_getGId(void);
C_String_t Posix_SysDB_Passwd_getName(void);
C_String_t Posix_SysDB_Passwd_getShell(void);
C_UId_t Posix_SysDB_Passwd_getUId(void);
extern const C_Speed_t Posix_TTY_B0;
extern const C_Speed_t Posix_TTY_B110;
extern const C_Speed_t Posix_TTY_B1200;
extern const C_Speed_t Posix_TTY_B134;
extern const C_Speed_t Posix_TTY_B150;
extern const C_Speed_t Posix_TTY_B1800;
extern const C_Speed_t Posix_TTY_B19200;
extern const C_Speed_t Posix_TTY_B200;
extern const C_Speed_t Posix_TTY_B2400;
extern const C_Speed_t Posix_TTY_B300;
extern const C_Speed_t Posix_TTY_B38400;
extern const C_Speed_t Posix_TTY_B4800;
extern const C_Speed_t Posix_TTY_B50;
extern const C_Speed_t Posix_TTY_B600;
extern const C_Speed_t Posix_TTY_B75;
extern const C_Speed_t Posix_TTY_B9600;