basis-library/primitive/basis-ffi.sml

val SC_XOPEN_REALTIME = _const "Posix_ProcEnv_SC_XOPEN_REALTIME" : C.Int.t;
val SC_XOPEN_REALTIME_THREADS = _const "Posix_ProcEnv_SC_XOPEN_REALTIME_THREADS" : C.Int.t;
val SC_XOPEN_SHM = _const "Posix_ProcEnv_SC_XOPEN_SHM" : C.Int.t;
val SC_XOPEN_STREAMS = _const "Posix_ProcEnv_SC_XOPEN_STREAMS" : C.Int.t;
val SC_XOPEN_UNIX = _const "Posix_ProcEnv_SC_XOPEN_UNIX" : C.Int.t;
val SC_XOPEN_VERSION = _const "Posix_ProcEnv_SC_XOPEN_VERSION" : C.Int.t;
val setenv = _import "Posix_ProcEnv_setenv" : NullString8.t * NullString8.t -> (C.Int.t) C.Errno.t;
val setgid = _import "Posix_ProcEnv_setgid" : C.GId.t -> (C.Int.t) C.Errno.t;
val setgroups = _import "Posix_ProcEnv_setgroups" : C.Int.t * (C.GId.t) vector -> (C.Int.t) C.Errno.t;
val setpgid = _import "Posix_ProcEnv_setpgid" : C.PId.t * C.PId.t -> (C.Int.t) C.Errno.t;
val setsid = _import "Posix_ProcEnv_setsid" : unit -> (C.PId.t) C.Errno.t;
val setuid = _import "Posix_ProcEnv_setuid" : C.UId.t -> (C.Int.t) C.Errno.t;
val sysconf = _import "Posix_ProcEnv_sysconf" : C.Int.t -> (C.Long.t) C.Errno.t;
val times = _import "Posix_ProcEnv_times" : unit -> (C.Clock.t) C.Errno.t;
structure Times = 
struct
val getCSTime = _import "Posix_ProcEnv_Times_getCSTime" : unit -> C.Clock.t;
val getCUTime = _import "Posix_ProcEnv_Times_getCUTime" : unit -> C.Clock.t;
val getSTime = _import "Posix_ProcEnv_Times_getSTime" : unit -> C.Clock.t;
val getUTime = _import "Posix_ProcEnv_Times_getUTime" : unit -> C.Clock.t;
end
val ttyname = _import "Posix_ProcEnv_ttyname" : C.Fd.t -> (C.String.t) C.Errno.t;
val uname = _import "Posix_ProcEnv_uname" : unit -> (C.Int.t) C.Errno.t;
structure Uname = 
struct
val getMachine = _import "Posix_ProcEnv_Uname_getMachine" : unit -> C.String.t;
val getNodeName = _import "Posix_ProcEnv_Uname_getNodeName" : unit -> C.String.t;
val getRelease = _import "Posix_ProcEnv_Uname_getRelease" : unit -> C.String.t;
val getSysName = _import "Posix_ProcEnv_Uname_getSysName" : unit -> C.String.t;
val getVersion = _import "Posix_ProcEnv_Uname_getVersion" : unit -> C.String.t;
end
end
structure Process = 
struct
val alarm = _import "Posix_Process_alarm" : C.UInt.t -> C.UInt.t;
val exece = _import "Posix_Process_exece" : NullString8.t * NullString8Array.t * NullString8Array.t -> (C.Int.t) C.Errno.t;
val execp = _import "Posix_Process_execp" : NullString8.t * NullString8Array.t -> (C.Int.t) C.Errno.t;
val exit = _import "Posix_Process_exit" : C.Status.t -> unit;
val exitStatus = _import "Posix_Process_exitStatus" : C.Status.t -> C.Int.t;
val fork = _import "Posix_Process_fork" : unit -> (C.PId.t) C.Errno.t;
val ifExited = _import "Posix_Process_ifExited" : C.Status.t -> Bool.t;
val ifSignaled = _import "Posix_Process_ifSignaled" : C.Status.t -> Bool.t;
val ifStopped = _import "Posix_Process_ifStopped" : C.Status.t -> Bool.t;
val kill = _import "Posix_Process_kill" : C.PId.t * C.Signal.t -> (C.Int.t) C.Errno.t;
val nanosleep = _import "Posix_Process_nanosleep" : (C.Time.t) ref * (C.Long.t) ref -> (C.Int.t) C.Errno.t;
val pause = _import "Posix_Process_pause" : unit -> (C.Int.t) C.Errno.t;
val sleep = _import "Posix_Process_sleep" : C.UInt.t -> C.UInt.t;
val stopSig = _import "Posix_Process_stopSig" : C.Status.t -> C.Signal.t;
val system = _import "Posix_Process_system" : NullString8.t -> (C.Status.t) C.Errno.t;
val termSig = _import "Posix_Process_termSig" : C.Status.t -> C.Signal.t;
structure W = 
struct
val CONTINUED = _const "Posix_Process_W_CONTINUED" : C.Int.t;
val NOHANG = _const "Posix_Process_W_NOHANG" : C.Int.t;
val UNTRACED = _const "Posix_Process_W_UNTRACED" : C.Int.t;
end
val waitpid = _import "Posix_Process_waitpid" : C.PId.t * (C.Int.t) ref * C.Int.t -> (C.PId.t) C.Errno.t;
end
structure Signal = 
struct
val default = _import "Posix_Signal_default" : C.Signal.t -> (C.Int.t) C.Errno.t;
val handlee = _import "Posix_Signal_handlee" : C.Signal.t -> (C.Int.t) C.Errno.t;
val handleGC = _import "Posix_Signal_handleGC" : unit -> unit;
val ignore = _import "Posix_Signal_ignore" : C.Signal.t -> (C.Int.t) C.Errno.t;
val isDefault = _import "Posix_Signal_isDefault" : C.Signal.t * (Bool.t) ref -> (C.Int.t) C.Errno.t;
val isIgnore = _import "Posix_Signal_isIgnore" : C.Signal.t * (Bool.t) ref -> (C.Int.t) C.Errno.t;
val isPending = _import "Posix_Signal_isPending" : C.Signal.t -> Bool.t;
val isPendingGC = _import "Posix_Signal_isPendingGC" : unit -> Bool.t;
val NSIG = _const "Posix_Signal_NSIG" : C.Int.t;
val resetPending = _import "Posix_Signal_resetPending" : unit -> unit;
val SIG_BLOCK = _const "Posix_Signal_SIG_BLOCK" : C.Int.t;
val SIG_SETMASK = _const "Posix_Signal_SIG_SETMASK" : C.Int.t;
val SIG_UNBLOCK = _const "Posix_Signal_SIG_UNBLOCK" : C.Int.t;
val SIGABRT = _const "Posix_Signal_SIGABRT" : C.Signal.t;
val sigaddset = _import "Posix_Signal_sigaddset" : C.Signal.t -> (C.Int.t) C.Errno.t;
val SIGALRM = _const "Posix_Signal_SIGALRM" : C.Signal.t;
val SIGBUS = _const "Posix_Signal_SIGBUS" : C.Signal.t;
val SIGCHLD = _const "Posix_Signal_SIGCHLD" : C.Signal.t;
val SIGCONT = _const "Posix_Signal_SIGCONT" : C.Signal.t;
val sigdelset = _import "Posix_Signal_sigdelset" : C.Signal.t -> (C.Int.t) C.Errno.t;
val sigemptyset = _import "Posix_Signal_sigemptyset" : unit -> (C.Int.t) C.Errno.t;
val sigfillset = _import "Posix_Signal_sigfillset" : unit -> (C.Int.t) C.Errno.t;
val SIGFPE = _const "Posix_Signal_SIGFPE" : C.Signal.t;
val SIGHUP = _const "Posix_Signal_SIGHUP" : C.Signal.t;
val SIGILL = _const "Posix_Signal_SIGILL" : C.Signal.t;
val SIGINT = _const "Posix_Signal_SIGINT" : C.Signal.t;
val sigismember = _import "Posix_Signal_sigismember" : C.Signal.t -> (C.Int.t) C.Errno.t;
val SIGKILL = _const "Posix_Signal_SIGKILL" : C.Signal.t;
val SIGPIPE = _const "Posix_Signal_SIGPIPE" : C.Signal.t;
val SIGPOLL = _const "Posix_Signal_SIGPOLL" : C.Signal.t;
val sigprocmask = _import "Posix_Signal_sigprocmask" : C.Int.t -> (C.Int.t) C.Errno.t;
val SIGPROF = _const "Posix_Signal_SIGPROF" : C.Signal.t;
val SIGQUIT = _const "Posix_Signal_SIGQUIT" : C.Signal.t;
val SIGSEGV = _const "Posix_Signal_SIGSEGV" : C.Signal.t;
val SIGSTOP = _const "Posix_Signal_SIGSTOP" : C.Signal.t;
val sigsuspend = _import "Posix_Signal_sigsuspend" : unit -> unit;
val SIGSYS = _const "Posix_Signal_SIGSYS" : C.Signal.t;
val SIGTERM = _const "Posix_Signal_SIGTERM" : C.Signal.t;
val SIGTRAP = _const "Posix_Signal_SIGTRAP" : C.Signal.t;
val SIGTSTP = _const "Posix_Signal_SIGTSTP" : C.Signal.t;
val SIGTTIN = _const "Posix_Signal_SIGTTIN" : C.Signal.t;
val SIGTTOU = _const "Posix_Signal_SIGTTOU" : C.Signal.t;
val SIGURG = _const "Posix_Signal_SIGURG" : C.Signal.t;
val SIGUSR1 = _const "Posix_Signal_SIGUSR1" : C.Signal.t;
val SIGUSR2 = _const "Posix_Signal_SIGUSR2" : C.Signal.t;
val SIGVTALRM = _const "Posix_Signal_SIGVTALRM" : C.Signal.t;
val SIGXCPU = _const "Posix_Signal_SIGXCPU" : C.Signal.t;
val SIGXFSZ = _const "Posix_Signal_SIGXFSZ" : C.Signal.t;
end
structure SysDB = 
struct
val getgrgid = _import "Posix_SysDB_getgrgid" : C.GId.t -> Bool.t;
val getgrnam = _import "Posix_SysDB_getgrnam" : NullString8.t -> Bool.t;
val getpwnam = _import "Posix_SysDB_getpwnam" : NullString8.t -> Bool.t;
val getpwuid = _import "Posix_SysDB_getpwuid" : C.GId.t -> Bool.t;
structure Group = 
struct
val getGId = _import "Posix_SysDB_Group_getGId" : unit -> C.GId.t;
val getMem = _import "Posix_SysDB_Group_getMem" : unit -> C.StringArray.t;
val getName = _import "Posix_SysDB_Group_getName" : unit -> C.String.t;
end
structure Passwd = 
struct
val getDir = _import "Posix_SysDB_Passwd_getDir" : unit -> C.String.t;
val getGId = _import "Posix_SysDB_Passwd_getGId" : unit -> C.GId.t;
val getName = _import "Posix_SysDB_Passwd_getName" : unit -> C.String.t;
val getShell = _import "Posix_SysDB_Passwd_getShell" : unit -> C.String.t;
val getUId = _import "Posix_SysDB_Passwd_getUId" : unit -> C.UId.t;
end
end
structure TTY = 
struct
val B0 = _const "Posix_TTY_B0" : C.Speed.t;
val B110 = _const "Posix_TTY_B110" : C.Speed.t;
val B1200 = _const "Posix_TTY_B1200" : C.Speed.t;
val B134 = _const "Posix_TTY_B134" : C.Speed.t;
val B150 = _const "Posix_TTY_B150" : C.Speed.t;
val B1800 = _const "Posix_TTY_B1800" : C.Speed.t;
val B19200 = _const "Posix_TTY_B19200" : C.Speed.t;
val B200 = _const "Posix_TTY_B200" : C.Speed.t;
val B2400 = _const "Posix_TTY_B2400" : C.Speed.t;
val B300 = _const "Posix_TTY_B300" : C.Speed.t;
val B38400 = _const "Posix_TTY_B38400" : C.Speed.t;
val B4800 = _const "Posix_TTY_B4800" : C.Speed.t;
val B50 = _const "Posix_TTY_B50" : C.Speed.t;
val B600 = _const "Posix_TTY_B600" : C.Speed.t;
val B75 = _const "Posix_TTY_B75" : C.Speed.t;
val B9600 = _const "Posix_TTY_B9600" : C.Speed.t;
structure CFlags = 
struct
val CLOCAL = _const "Posix_TTY_CFlags_CLOCAL" : C.TCFlag.t;
val CREAD = _const "Posix_TTY_CFlags_CREAD" : C.TCFlag.t;
val CS5 = _const "Posix_TTY_CFlags_CS5" : C.TCFlag.t;
val CS6 = _const "Posix_TTY_CFlags_CS6" : C.TCFlag.t;
val CS7 = _const "Posix_TTY_CFlags_CS7" : C.TCFlag.t;
val CS8 = _const "Posix_TTY_CFlags_CS8" : C.TCFlag.t;
val CSIZE = _const "Posix_TTY_CFlags_CSIZE" : C.TCFlag.t;
val CSTOPB = _const "Posix_TTY_CFlags_CSTOPB" : C.TCFlag.t;
val HUPCL = _const "Posix_TTY_CFlags_HUPCL" : C.TCFlag.t;
val PARENB = _const "Posix_TTY_CFlags_PARENB" : C.TCFlag.t;
val PARODD = _const "Posix_TTY_CFlags_PARODD" : C.TCFlag.t;
end
structure IFlags = 
struct
val BRKINT = _const "Posix_TTY_IFlags_BRKINT" : C.TCFlag.t;
val ICRNL = _const "Posix_TTY_IFlags_ICRNL" : C.TCFlag.t;
val IGNBRK = _const "Posix_TTY_IFlags_IGNBRK" : C.TCFlag.t;
val IGNCR = _const "Posix_TTY_IFlags_IGNCR" : C.TCFlag.t;
val IGNPAR = _const "Posix_TTY_IFlags_IGNPAR" : C.TCFlag.t;
val INLCR = _const "Posix_TTY_IFlags_INLCR" : C.TCFlag.t;
val INPCK = _const "Posix_TTY_IFlags_INPCK" : C.TCFlag.t;
val ISTRIP = _const "Posix_TTY_IFlags_ISTRIP" : C.TCFlag.t;
val IXANY = _const "Posix_TTY_IFlags_IXANY" : C.TCFlag.t;
val IXOFF = _const "Posix_TTY_IFlags_IXOFF" : C.TCFlag.t;
val IXON = _const "Posix_TTY_IFlags_IXON" : C.TCFlag.t;
val PARMRK = _const "Posix_TTY_IFlags_PARMRK" : C.TCFlag.t;
end
structure LFlags = 
struct
val ECHO = _const "Posix_TTY_LFlags_ECHO" : C.TCFlag.t;
val ECHOE = _const "Posix_TTY_LFlags_ECHOE" : C.TCFlag.t;
val ECHOK = _const "Posix_TTY_LFlags_ECHOK" : C.TCFlag.t;
val ECHONL = _const "Posix_TTY_LFlags_ECHONL" : C.TCFlag.t;
val ICANON = _const "Posix_TTY_LFlags_ICANON" : C.TCFlag.t;
val IEXTEN = _const "Posix_TTY_LFlags_IEXTEN" : C.TCFlag.t;
val ISIG = _const "Posix_TTY_LFlags_ISIG" : C.TCFlag.t;
val NOFLSH = _const "Posix_TTY_LFlags_NOFLSH" : C.TCFlag.t;
val TOSTOP = _const "Posix_TTY_LFlags_TOSTOP" : C.TCFlag.t;
end
structure OFlags = 
struct
val BS0 = _const "Posix_TTY_OFlags_BS0" : C.TCFlag.t;
val BS1 = _const "Posix_TTY_OFlags_BS1" : C.TCFlag.t;
val BSDLY = _const "Posix_TTY_OFlags_BSDLY" : C.TCFlag.t;
val CR0 = _const "Posix_TTY_OFlags_CR0" : C.TCFlag.t;
val CR1 = _const "Posix_TTY_OFlags_CR1" : C.TCFlag.t;
val CR2 = _const "Posix_TTY_OFlags_CR2" : C.TCFlag.t;
val CR3 = _const "Posix_TTY_OFlags_CR3" : C.TCFlag.t;
val CRDLY = _const "Posix_TTY_OFlags_CRDLY" : C.TCFlag.t;
val FF0 = _const "Posix_TTY_OFlags_FF0" : C.TCFlag.t;
val FF1 = _const "Posix_TTY_OFlags_FF1" : C.TCFlag.t;
val FFDLY = _const "Posix_TTY_OFlags_FFDLY" : C.TCFlag.t;
val NL0 = _const "Posix_TTY_OFlags_NL0" : C.TCFlag.t;
val NL1 = _const "Posix_TTY_OFlags_NL1" : C.TCFlag.t;
val NLDLY = _const "Posix_TTY_OFlags_NLDLY" : C.TCFlag.t;
val OCRNL = _const "Posix_TTY_OFlags_OCRNL" : C.TCFlag.t;
val OFILL = _const "Posix_TTY_OFlags_OFILL" : C.TCFlag.t;
val ONLCR = _const "Posix_TTY_OFlags_ONLCR" : C.TCFlag.t;
val ONLRET = _const "Posix_TTY_OFlags_ONLRET" : C.TCFlag.t;
val ONOCR = _const "Posix_TTY_OFlags_ONOCR" : C.TCFlag.t;
val OPOST = _const "Posix_TTY_OFlags_OPOST" : C.TCFlag.t;
val TAB0 = _const "Posix_TTY_OFlags_TAB0" : C.TCFlag.t;
val TAB1 = _const "Posix_TTY_OFlags_TAB1" : C.TCFlag.t;
val TAB2 = _const "Posix_TTY_OFlags_TAB2" : C.TCFlag.t;
val TAB3 = _const "Posix_TTY_OFlags_TAB3" : C.TCFlag.t;
